# djangotutorial

./: .gitignore  pyproject.toml
mysite/: settings.py  urls.py
polls/: models.py  tests.py  urls.py  views.py
polls/static/polls/: style.css
